fix filters count alignment

--- a/src/app/portal/components/results/filters/filters-shared.scss
+++ b/src/app/portal/components/results/filters/filters-shared.scss
@@ -93,7 +93,6 @@
     span.amount {
       font-weight: normal;
       font-size: 1rem;
-      margin-right: 20px;
     }
 
     .mat-expanded mat-expansion-panel-header.mat-expanded {
@@ -206,7 +205,6 @@
     span.amount {
       font-size: 14px;
       white-space: nowrap;
-      margin-right: 20px;
     }
 
     .show-more {
